Fixing footer alignment to achieve responsive design

--- a/Week 1 Recipe Page/styles.css
+++ b/Week 1 Recipe Page/styles.css
@@ -242,20 +242,20 @@ body{
     background-color: #FCD6D6; 
 }
 footer {
-    display: inline-flex;                       
+    display: flex;          
+    flex-direction: column;   
+    justify-content: center;
+    align-items: center;          
     background-color: #FDF1D9;   
     padding: 10px 20px;          
-    position: relative;          
-    width: 100%;                  
+    position: relative;                           
     border-top: 2px dotted #FCD6D6;   
-    max-width: 600px;
     min-width: 300px;
     bottom: 0;
     overflow: hidden; 
-    flex-shrink: 0;  
-    justify-content: flex-start; 
-    align-items: flex-start; 
-    margin-left: 55px;
+    flex-shrink: 0; 
+    flex-grow: 0;  
+    margin: 0 55px;
 }
 .footers {
     display: flex;               
